@@ -1,4 +1,6 @@
 CVS - 2.1.1-dev
+- ingres_fetch_proc_return should return NULL if no value is available
+- Add ingres_unbuffered_query()
 - Handle leading white-space characters in query detection (thanks Alex Trofast)
 
 2.1.0
